model de paquetes y filtros